--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.2.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -20,8 +21,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-social-login": "^3.0.1",
+    "angular2-toaster": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "webpack-dev-server": "^2.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
