--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-social-login": "^3.0.1",
     "angular2-toaster": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "rxjs": "^5.1.0",
     "webpack-dev-server": "^2.5.0",
     "zone.js": "^0.8.4"
